# kimchi-discount-pipeline

./: .env.example  .gitignore  AGENTS.md  Makefile  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: AGENTS.md  _directive_lint.py
applications/: bootstrap.sh  bootstrap_profiles.py  cloud_routine_run.sh  daily_pipeline.sh  gen_methods_manifest.py  run_daily_local.sh  telemetry_gc.py  verify_dart_business_content.py  verify_segment_calibration.py
config/user/: behavior.yaml.example  exclusions.yaml.example  manual_additions.yaml.example  portfolio.yaml.example
domains/_shared/: __init__.py  nav_history.py
domains/audit_integrity/: AGENTS.md  __init__.py  _boundary.py  init_shadow_state.py  main.py  stat_tests.py
domains/catalyst/: AGENTS.md  __init__.py  _boundary.py  main.py
domains/macro/: AGENTS.md  __init__.py  _boundary.py  breadth_fetch.py  main.py  spx_constituents_refresh.py
domains/policy/: AGENTS.md  __init__.py  _boundary.py  main.py
domains/risk_engine/: AGENTS.md  _boundary.py  event_falsifier_linker.py  falsifier_proximity.py  portfolio_state_derive.py  positions_sync.py  sizing.py  thesis_expiry_monitor.py  thesis_sync.py
domains/screener/: AGENTS.md  _boundary.py  errors.py  main.py  schemas.py
domains/universe/: AGENTS.md  __init__.py  _boundary.py  main.py  segment_index_main.py
governance/: deployment-residency.md  pipeline-overview.md  runtime-policy.local.yaml.example  runtime-policy.yaml  schedules.lock.yaml  schedules.yaml  schedules.yaml.example  thresholds.yaml
governance/AXIOMS/: asymmetry.md  edge-source.md  ergodicity.md  falsifiability.md  statistical-honesty.md
governance/capabilities/: C1-daily-brief.md  C2-position-monitoring.md  C3-llm-value-audit.md  C4-external-signal-intake.md  C5-sizing-recommendation.md  C6-macro-regime-gate.md  README.md
governance/decisions/: 0001-deployment-residency-local-primary.md  0002-governance-config-ownership-axis.md  0003-llm-drafts-python-commits.md  0004-bounded-context-split-criteria.md  0005-boundary-ports-and-adapters.md  0006-fat-contract-isp.md  0007-risk-engine-no-concern-reorg.md  0008-storage-topology.md  0009-claude-code-to-zed-migration.md  0010-hook-disposition.md  0011-agent-harness-remediation-v4.md  0012-segment-scoped-profiles-vector-semantic.md  0013-policy-tier-consolidation-governance-unified-schema.md  0014-policy-storage-scope-mirror-deterministic-contract.md  0015-config-placement-discriminator.md  0016-deepseek-as-claude-code-backend.md  0017-local-direct-notify-email-telegram.md  0027-claude-code-to-zed-migration.md  README.md
governance/directives/: 00-principles.md  05-architecture.md  10-python.md  11-shell.md  12-config-text.md  20-quality.md  30-security.md  AGENTS.md
governance/policy/: methods_manifest.yaml
governance/procedures/: cloud-routine-prompt.md  config-files-reference.md
governance/proposals/: README.md  agent-harness-remediation-plan-2026-06.md  architecture-review-findings-2026-06.md  batch-fetch-and-profile-authoring-review-2026-06.md  graphify-plugin-roi-2026-06.md  parallelization-roi-2026-06.md
governance/specs/: architecture-review-findings-2026-06.md  deployment-residency.md  hard-guards.md
infrastructure/_common/: __init__.py  _holidays_krx.json  _spx_constituents.1.json  _spx_constituents.json  bootstrap_context.py  python_env.sh  telemetry_gc.py  telemetry_registry.py  utils.py
infrastructure/dart/: client.py  holding_subsidiaries_parser.py  preferred_pairs_parser.py
infrastructure/embedding/: __init__.py  client.py
tests/: conftest.py
(+553 files in other folders)
