[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kimchi-discount-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
description = "Retail investment pipeline (Korean special situations, kimchi-discount arbitrage) — agent + helper"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff==0.8.6",
]
# segment-scoped profile 의 semantic 분류 — 임베디드 벡터 가속(sqlite-vec).
# 미설치 시 infrastructure/vectorstore 는 stdlib sqlite3 + brute-force cosine 로 graceful
# degrade (정확·충분, KR 특수상황 universe 규모). 임베딩은 기존 requests 사용 (신규 의존 0).
semantic = [
    "sqlite-vec==0.1.6",
]

[tool.setuptools.packages.find]
include = ["domains*", "infrastructure*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
    "domains/_shared/tests",
    "domains/macro/tests",
    "domains/policy/tests",
    "domains/universe/tests",
    "domains/screener/tests",
    "domains/catalyst/tests",
    "domains/audit_integrity/tests",
]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: end-to-end smoke tests (file I/O, no network)",
    "unit: pure-function tests (no file I/O)",
    "arch: architecture fitness functions (repo-wide AST invariants, no I/O — tests/architecture/)",
    "live: network-dependent live verification (skipped unless RUN_DART_LIVE=1; e.g. DART document.xml)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["domains", "infrastructure/_common"]
omit = [
    "**/__pycache__/**",
    "**/_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ADR-0014: 결정론적 Python lint 레이어 (dev-only — runtime zero-dep D-CORE-5 불변).
# 초기 ruleset 은 고신호·저-churn: F(pyflakes 미사용/미정의), E4/E7/E9(import/statement/
# syntax), B(flake8-bugbear). I(isort)/UP(pyupgrade) 는 기존 코드 정렬·현대화 churn 때문에
# 보류 — 점진 확장. enforcement scope 는 Makefile RUFF_PATHS (점진 확대).
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["F", "E4", "E7", "E9", "B"]
